--- a/bijintokei/bijintokei.html
+++ b/bijintokei/bijintokei.html
@@ -1,6 +1,22 @@
+<!-- 美人時計を表示する -->
 <div id="bijin-watch-div">
-<div class="bijin_blog_part" data-width="290" data-bcid="okayama" ></div>
+	<!-- 美人時計運営サイトのAPIから取得する -->
+	<div class="bijin_blog_part" data-width="290" data-bcid="okayama" ></div>
+	<!-- ラベル -->
+	<div style="float: left;" id ="bijin-select-lable">SELECT YOUR BIJIN</div>
+	<!-- ドロップボックス -->
+	<div style="clear: left;">
+		<select id="bijin-select" style="color: black;" name="prefecture">
+			<option value="okayama" selected>岡山</option>
+			<option value="hiroshima">広島</option>
+			<option value="osaka">大阪</option>
+			<option value="tokyo">東京</option>
+			<option value="taiwan">台湾</option>
+			<option value="thailand">タイ</option>
+		</select>
+	</div>
 </div>
+
 <script type="text/javascript">
 
 $(document).ready(function(){
@@ -50,14 +66,3 @@ function bijinLoad() {
                 jQuery("head").append(js);
 };
 </script>
-
-<div id ="bijin-select-lable">SELECT YOUR BIJIN</div>
-
-<select id="bijin-select" style="color: black;" name="prefecture">
-<option value="okayama" selected>岡山</option>
-<option value="hiroshima">広島</option>
-<option value="osaka">大阪</option>
-<option value="tokyo">東京</option>
-</select>
-<!--
-<input id="bijin-load-button" style="color: black;" value="load" type="button" onClick="bijinLoadFunc()" ></input> -->
